--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ iframe{
 		<h2>klo udah bub scroll kebawah</h2> <br></div>
 	</div>
     <div class="row" id="k2">
-	  <h4 > Hallo Kamu!!💗</h4>
+	  <h4 > Hallo Bububcuuuu!!💗</h4>
 	</div>
     <div class="row" id="k3">
 	  <h4 > Yang cantikkkkk,baikkkk ke iko🫶🏻 </h4>
